--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site
-name: 'Mundana'
-description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/favicon.ico'
-baseurl: '/mundana-theme-jekyll'
-disqus: 'demowebsite'
-email: 'wowthemesnet@gmail.com'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+name: "Melabit"
+description: "Mac e programmazione, con un tocco di retrocomputing"
+logo: "assets/images/logo.png"
+favicon: "assets/images/favicon.ico"
+baseurl: ""
+disqus: "sabinomaggi"
+email: "sabino.maggi@@gmail.com"
+mailchimp-list: ""
 
 include: ["_pages"]
-permalink: /:title/
+permalink: /:year/:month/:day/:title/
 
 # Plugins
 plugins: 
@@ -19,21 +19,13 @@ plugins:
   - jekyll-seo-tag
   
 authors:
-    sal:
-      name:           Sal
-      site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
-      email:          wowthemesnet@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
-
-    jane:
-      name:           Jane
-      site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
-      email:          fakemail@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+    "Sabino Maggi":
+      name:           Sabino Maggi
+      site:           https://melabit.wordpress.com
+      avatar:         assets/images/SM_400x400.png
+      bio:            "Hi, I am the real Sabino Maggi"
+      email:          sabino.maggi@gmail.com
+      twitter:        https://twitter.com/sabinomaggi
  
 # Defaults
 defaults:
@@ -43,8 +35,8 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
-      avatar: /assets/images/avatar1.jpg
+      author: "Sabino Maggi"
+      avatar: /assets/images/SM_400x400.png
       
   # all pages
   - scope:
@@ -57,7 +49,7 @@ markdown: kramdown
 highlighter: rouge
 
 # Paginate
-paginate: 10
+paginate: 20
 
 
 
