Improve comment layout and bio

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,9 @@ authors:
       name:           Sabino Maggi
       site:           https://melabit.wordpress.com
       avatar:         assets/images/SM_400x400.png
-      bio:            ""
+      bio:            "Uso da molti anni prevalentemente il Mac, davanti al quale passo la maggior parte della giornata. E mi piace anche Unix — che è il motore che gira sotto l’interfaccia amichevole e graficamente strepitosa di OS X — e la sua incarnazione moderna, Linux.
+In questo blog condivido alcuni spunti e idee che derivano da quello che faccio ogni giorno e che hanno poco spazio altrove.
+Argomenti a volte ostici ma che, se vengono affrontati con il tono giusto, possono diventare estremamente interessanti e rendere molto più produttivo e flessibile l’uso quotidiano del computer."
       email:          sabino.maggi@gmail.com
       twitter:        https://twitter.com/sabinomaggi
 
