Avoid saving reserved information to repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#--- original content ---
 _site
 .sass-cache
 .jekyll-metadata
@@ -5,9 +6,17 @@ node_modules
 Gemfile.lock
 
 #--- SM additions ---
+# macOS junk
 .DS_store
+
+# sparse files/directories
 *.OLD
 *.md
-assets/images/*
 TRASH
+
+# post images
+assets/images/*
+
+# file containing information to be kept reserved
+_data/_secrets.yml
 #--------------------
