--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ TRASH
 assets/images/*
 
 # file containing information to be kept reserved
-*/secrets.yml
+_data/secrets.yml
 #--------------------
