Avoid saving reserved information to repository: working
NOTE: .gitignore method does not work

much better to use specific command:
% git update-index --assume-unchanged _data/secrets.yml

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ TRASH
 assets/images/*
 
 # file containing information to be kept reserved
+#   does not work, better to use
+#     % git update-index --assume-unchanged _data/secrets.yml
 _data/secrets.yml
 #--------------------
