Fix image links on aletbar prev/next posts

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: "Melabit"
 description: "Mac e programmazione, con un tocco di retrocomputing"
 logo: "assets/images/logo.png"
 favicon: "assets/images/favicon.ico"
-baseurl: ""
+baseurl: "192.168.1.102"
 # disqus: "sabinomaggi"
 email: "sabino.maggi@@gmail.com"
 # mailchimp-list: ""
