--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ name: "Melabit"
 description: "Mac e programmazione, con un tocco di retrocomputing"
 logo: "assets/images/logo.png"
 favicon: "assets/images/favicon.ico"
-baseurl: "192.168.1.102"
+baseurl: ""
 # disqus: "sabinomaggi"
-email: "sabino.maggi@@gmail.com"
+email: "sabino.maggi@gmail.com"
 # mailchimp-list: ""
 
 include: ["_pages"]
@@ -18,6 +18,7 @@ plugins:
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-regex-replace
+  - jekyll-polyglot
 
 authors:
     "Sabino Maggi":
@@ -29,6 +30,17 @@ In questo blog condivido alcuni spunti e idee che derivano da quello che faccio 
 Argomenti a volte ostici ma che, se vengono affrontati con il tono giusto, possono diventare estremamente interessanti e rendere molto più produttivo e flessibile l’uso quotidiano del computer."
       email:          sabino.maggi@gmail.com
       twitter:        https://twitter.com/sabinomaggi
+
+
+# Polyglot
+languages: ["en", "it"]
+default_lang: "it"
+exclude_from_localization: ["assets/css", "assets/img"]
+parallel_localization: true
+
+sass:
+  sourcemap: never
+
 
 # Defaults
 defaults:
