--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ permalink: /:year/:month/:day/:title/
 plugins: 
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-paginate
+  # - jekyll-paginate
+  - jekyll-paginate-v2
   - jekyll-seo-tag
   - jekyll-regex-replace
   - jekyll-polyglot
