--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,12 @@ highlighter: rouge
 # Paginate v2
 pagination:
   enabled: true
+  # locale: en_US, it_IT
+  offset: 4
+  per_page: 8
+  permalink: "/page:num/"
+  sort_reverse: true
   debug: false
-  per_page: 10
-  permalink: "/page/:num/"
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
