--- a/_config.yml
+++ b/_config.yml
@@ -70,12 +70,12 @@ highlighter: rouge
 # Paginate v2
 pagination:
   enabled: true
-  # locale: en_US, it_IT
-  offset: 4
+  # locale: it
+  offset: 0
   per_page: 8
   permalink: "/page:num/"
   sort_reverse: true
-  debug: false
+  debug: true
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
