Localize post page

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,14 +1,29 @@
 strings:
   en:
-    home:         "Home"
-    latest_posts: "Latest Posts"
-    all_posts:    "All Posts"
-    featured:     "Featured"
-    read_more:    "Read More"
+    home:           "Home"
+    categories:     "Categories"
+    latest_posts:   "Latest Posts"
+    all_posts:      "All Posts"
+    featured:       "Featured"
+    read_more:      "Read More"
+    follow:         "Follow"
+    share_this:     "Share this"
+    written_by:     "Written by"
+    comments:       "Comments"
+    min_read:       "min read"
+    mins_read:      "mins read"
   it:
-    home:         "Home"
-    latest_posts: "Ultimi articoli"
-    all_posts:    "Tutti gli articoli"
-    featured:     "In evidenza"
-    read_more:    "Continua a leggere"
+    home:           "Home"
+    categories:     "Categorie"
+    latest_posts:   "Ultimi articoli"
+    all_posts:      "Tutti gli articoli"
+    featured:       "In evidenza"
+    read_more:      "Continua a leggere"
+    follow:         "Segui"
+    share_this:     "Condividi"
+    written_by:     "Pubblicato da"
+    comments:       "Comments"
+    min_read:       "minuto di lettura"
+    mins_read:      "minuti di lettura"
+    
     
