Track again the _pages folder

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ assets/images/*
 
 # exclude posts and pages (at least for now)
 _posts/
-_pages/
+# _pages/
 
 # the method below does not work when one has already committed a version of the file
 # not containg any secret, just to document how to use the secrets.yml file; 
