Complete localization of contact form and privacy policy

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -38,8 +38,9 @@ strings:
     comments:       "Comments"
     min_read:       "minuto di lettura"
     mins_read:      "minuti di lettura"
-    contact_send:   "Please send your message to"
-    contact_reply:  "We will reply as soon as possible"
+    contact_send:   "Invia il tuo messaggio a"
+    contact_reply:  "Ti risponderemo appena possibile"
+    contact_required:   "Tutti i campi sono obbligatori"
     contact_name:   "Nome"
     contact_email:  "Indirizzo e-mail"
     contact_msg:    "Testo del messaggio"
