Localize author list and bio

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,52 +1,64 @@
 strings:
-  en:
-    home:           "Home"
-    categories:     "Categories"
-    authors:        "Authors"
-    contact:        "Contact"
-    privacy:        "Privacy"
-    latest_posts:   "Latest Posts"
-    all_posts:      "All Posts"
-    featured:       "Featured"
-    read_more:      "Read More"
-    follow:         "Follow"
-    share_this:     "Share this"
-    written_by:     "Written by"
-    comments:       "Comments"
-    min_read:       "min read"
-    mins_read:      "mins read"
-    contact_send:   "Please send your message to"
-    contact_reply:  "We will reply as soon as possible"
-    contact_required:   "All fields are required"
-    contact_name:   "Name"
-    contact_email:  "E-mail Address"
-    contact_msg:    "Message"
-    send_btn:       "Send"
-  it:
-    home:           "Home"
-    categories:     "Categorie"
-    authors:        "Autori"
-    contact:        "Contatto"
-    privacy:        "Privacy"
-    latest_posts:   "Ultimi articoli"
-    all_posts:      "Tutti gli articoli"
-    featured:       "In evidenza"
-    read_more:      "Continua a leggere"
-    follow:         "Segui"
-    share_this:     "Condividi"
-    written_by:     "Pubblicato da"
-    comments:       "Comments"
-    min_read:       "minuto di lettura"
-    mins_read:      "minuti di lettura"
-    contact_send:   "Invia il tuo messaggio a"
-    contact_reply:  "Ti risponderemo appena possibile"
-    contact_required:   "Tutti i campi sono obbligatori"
-    contact_name:   "Nome"
-    contact_email:  "Indirizzo e-mail"
-    contact_msg:    "Testo del messaggio"
-    send_btn:       "Invia"
+    en:
+        home:           "Home"
+        categories:     "Categories"
+        authors:        "Authors"
+        contact:        "Contact"
+        privacy:        "Privacy"
+        latest_posts:   "Latest Posts"
+        all_posts:      "All Posts"
+        featured:       "Featured"
+        read_more:      "Read More"
+        follow:         "Follow"
+        share_this:     "Share this"
+        written_by:     "Written by"
+        comments:       "Comments"
+        min_read:       "min read"
+        mins_read:      "mins read"
+        contact_send:   "Please send your message to"
+        contact_reply:  "We will reply as soon as possible"
+        contact_required:   "All fields are required"
+        contact_name:   "Name"
+        contact_email:  "E-mail Address"
+        contact_msg:    "Message"
+        send_btn:       "Send"
+    it:
+        home:           "Home"
+        categories:     "Categorie"
+        authors:        "Autori"
+        contact:        "Contatto"
+        privacy:        "Privacy"
+        latest_posts:   "Ultimi articoli"
+        all_posts:      "Tutti gli articoli"
+        featured:       "In evidenza"
+        read_more:      "Continua a leggere"
+        follow:         "Segui"
+        share_this:     "Condividi"
+        written_by:     "Pubblicato da"
+        comments:       "Comments"
+        min_read:       "minuto di lettura"
+        mins_read:      "minuti di lettura"
+        contact_send:   "Invia il tuo messaggio a"
+        contact_reply:  "Ti risponderemo appena possibile"
+        contact_required:   "Tutti i campi sono obbligatori"
+        contact_name:   "Nome"
+        contact_email:  "Indirizzo e-mail"
+        contact_msg:    "Testo del messaggio"
+        send_btn:       "Invia"
+
 dates:
-  en:
-      date_format:    "%e %b %Y"
-  it:
-      date_format:    "%e %b %Y"
+    en:
+        date_format:    "%e %b %Y"
+    it:
+        date_format:    "%e %b %Y"
+
+bio:
+    en: 
+        Sabino Maggi:   "I have been using the Mac for many years, and it is in front of its screen that I spend most of my days. I am also passionate about Unix, the engine that powers the friendly and visually stunning interface of OS X, as well as its modern version, Linux.
+In this blog I share reflections and ideas inspired by my daily activities, insights that often find little space elsewhere.
+While dealing with sometimes complex topics, I believe that with the right approach they can become very interesting, greatly improving productivity and flexibility in daily computer use."
+        
+    it: 
+        Sabino Maggi:   "Uso il Mac da molti anni, ed è davanti al suo schermo che trascorro gran parte delle mie giornate. Sono appassionato anche di Unix, il motore che alimenta l'interfaccia amichevole e visivamente straordinaria di OS X, così come della sua versione moderna, Linux.
+In questo blog condivido riflessioni e idee ispirate dalle mie attività quotidiane, spunti che spesso trovano poco spazio altrove.
+Pur trattando argomenti talvolta complessi, credo che con il giusto approccio possano diventare molto interessanti, migliorando notevolmente la produttività e la flessibilità nell'uso quotidiano del computer."
