Fixed italian translation

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -37,7 +37,7 @@ strings:
         follow:         "Segui"
         share_this:     "Condividi"
         written_by:     "Pubblicato da"
-        comments:       "Comments"
+        comments:       "Commenti"
         min_read:       "minuto di lettura"
         mins_read:      "minuti di lettura"
         contact_send:   "Invia il tuo messaggio a"
