--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -25,9 +25,11 @@ strings:
         send_btn:       "Send"
         comment_add:    "Add a comment"
         comment_name:   "* Name"
-        comment_email:  "* Email address (hashed and used for Gravatar only)"
+        comment_email:  "* Email address"
+        comment_email_note: "The email address is hashed and used only for Gravatar."
         comment_web:    "Website"
         comment_chk:    "* Human check. this website ends on dot.. what? (com, net, ...)"
+        comment_chk_alt:    "* Check me out"
         comment_txt:    "* Comment"
     it:
         home:           "Home"
@@ -55,9 +57,11 @@ strings:
         send_btn:       "Invia"
         comment_add:    "Aggiungi un commento"
         comment_name:   "* Nome"
-        comment_email:  "* Indirizzo email (cifrato e usato solo per Gravatar)"
+        comment_email:  "* Indirizzo email"
+        comment_email_note: "L'indirizzo email viene cifrato e usato solo per Gravatar."
         comment_web:    "Sito web"
         comment_chk:    "* Human check. this website ends on dot.. what? (com, net, ...)"
+        comment_chk_alt:    "* Selezionami"
         comment_txt:    "* Commento"
 
 dates:
