--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -25,11 +25,13 @@ strings:
         send_btn:       "Send"
         comment_add:    "Add a comment"
         comment_name:   "* Name"
-        comment_email:  "* Email address"
-        comment_email_note: "The email address is hashed and used only for Gravatar."
+        comment_name_note:  "You can also use a nickname."
+        # comment_email:  "* Email address"
+        # comment_email_note: "The email address is hashed and used only for Gravatar."
         comment_web:    "Website"
-        comment_chk:    "* Human check. this website ends on dot.. what? (com, net, ...)"
-        comment_chk_alt:    "* Check me out"
+        comment_web_note:   "Optional."
+        comment_chk:    "* Check me out"
+        # comment_chk_alt:    "* Human check. this website ends on dot.. what? (com, net, ...)"
         comment_txt:    "* Comment"
     it:
         home:           "Home"
@@ -57,18 +59,22 @@ strings:
         send_btn:       "Invia"
         comment_add:    "Aggiungi un commento"
         comment_name:   "* Nome"
-        comment_email:  "* Indirizzo email"
-        comment_email_note: "L'indirizzo email viene cifrato e usato solo per Gravatar."
+        comment_name_note:  "È possibile utilizzare anche un nickname."
+        # comment_email:  "* Indirizzo email"
+        # comment_email_note: "L'indirizzo email viene cifrato e usato solo per Gravatar."
         comment_web:    "Sito web"
-        comment_chk:    "* Human check. this website ends on dot.. what? (com, net, ...)"
-        comment_chk_alt:    "* Selezionami"
+        comment_web_note:   "Se vuoi inserisci l'URL del tuo sito web."
+        comment_chk:    "* Selezionami"
+        # comment_chk_alt:    "* Human check. this website ends on dot.. what? (com, net, ...)"
         comment_txt:    "* Commento"
 
 dates:
     en:
         date_format:    "%e %b %Y"
+        month_names: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"]
     it:
         date_format:    "%e-%b-%Y"
+        month_names: ["Gennaio", "Febbraio", "Marzo", "Aprile", "Maggio", "Giugno", "Luglio", "Agosto", "Settembre", "Ottobre", "Novembre", "Dicembre"]
 
 bio:
     en: 
