Reset comment form after sending a new comment

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -23,6 +23,8 @@ strings:
         contact_email:  "E-mail Address"
         contact_msg:    "Message"
         send_btn:       "Send"
+        send_btn_sending:   "Sending..."
+        send_btn_ok:    "Comment sent"
         comment_add:    "Add a comment"
         comment_name:   "* Name"
         comment_name_note:  "You can also use a nickname."
@@ -57,6 +59,8 @@ strings:
         contact_email:  "Indirizzo e-mail"
         contact_msg:    "Testo del messaggio"
         send_btn:       "Invia"
+        send_btn_sending:   "Sto inviando..."
+        send_btn_ok:    "Commento inviato"
         comment_add:    "Aggiungi un commento"
         comment_name:   "* Nome"
         comment_name_note:  "È possibile utilizzare anche un nickname."
