Comment system works is fully funcyional

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -26,15 +26,15 @@ strings:
         send_btn_sending:   "Sending..."
         send_btn_ok:    "Comment sent"
         comment_add:    "Add a comment"
-        comment_name:   "* Name"
+        comment_name:   "Name or nickname"
         comment_name_note:  "You can also use a nickname."
         # comment_email:  "* Email address"
         # comment_email_note: "The email address is hashed and used only for Gravatar."
-        comment_web:    "Website"
+        comment_web:    "Website (optional)"
         comment_web_note:   "Optional."
-        comment_chk:    "* Check me out"
+        comment_chk:    "Check me out"
         # comment_chk_alt:    "* Human check. this website ends on dot.. what? (com, net, ...)"
-        comment_txt:    "* Comment"
+        comment_txt:    "Comment"
     it:
         home:           "Home"
         categories:     "Categorie"
@@ -62,15 +62,15 @@ strings:
         send_btn_sending:   "Sto inviando..."
         send_btn_ok:    "Commento inviato"
         comment_add:    "Aggiungi un commento"
-        comment_name:   "* Nome"
+        comment_name:   "Nome o nickname"
         comment_name_note:  "È possibile utilizzare anche un nickname."
         # comment_email:  "* Indirizzo email"
         # comment_email_note: "L'indirizzo email viene cifrato e usato solo per Gravatar."
-        comment_web:    "Sito web"
+        comment_web:    "Sito web (opzionale)"
         comment_web_note:   "Se vuoi inserisci l'URL del tuo sito web."
-        comment_chk:    "* Selezionami"
+        comment_chk:    "Selezionami"
         # comment_chk_alt:    "* Human check. this website ends on dot.. what? (com, net, ...)"
-        comment_txt:    "* Commento"
+        comment_txt:    "Commento"
 
 dates:
     en:
