--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ logo: "assets/images/logo.png"
 favicon: "assets/images/favicon.ico"
 baseurl: ""
 # siteurl: "http://192.168.1.102"
+siteurl: "http://152.70.43.19"
 # disqus: "sabinomaggi"
 email: "sabino.maggi@gmail.com"
 # mailchimp-list: ""
@@ -80,7 +81,8 @@ locales: [en, it]
 default_locale: en
 
 #--- Comma comments ---
-commentserver: http://localhost:5888
+# commentserver: http://localhost:5888
+commentserver: http://152.70.43.19:5888
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
